# compiler

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  release-plz.toml  rust-toolchain.toml  zizmor.yml
benches/: Cargo.toml  README.md
benches/benches/: is_prime_bench.rs
benches/src/: is_prime.rs  lib.rs
codegen/masm2/: Cargo.toml
codegen/masm2/src/: artifact.rs  emitter.rs  lib.rs  linker.rs  lower.rs  stack.rs
dialects/arith/: CHANGELOG.md  Cargo.toml
dialects/arith/src/: builders.rs  canonicalization.rs  lib.rs  ops.rs
dialects/debuginfo/: Cargo.toml
dialects/debuginfo/src/: builders.rs  lib.rs  ops.rs  transform.rs
dialects/hir/: CHANGELOG.md  Cargo.toml
dialects/hir/src/: analyses.rs  attributes.rs  builders.rs  canonicalization.rs  lib.rs  ops.rs  transforms.rs
dialects/scf/: CHANGELOG.md  Cargo.toml
dialects/scf/src/: builders.rs  canonicalization.rs  lib.rs  ops.rs
dialects/ub/: CHANGELOG.md  Cargo.toml
dialects/ub/src/: attributes.rs  builders.rs  lib.rs  ops.rs
dialects/wasm/: Cargo.toml
dialects/wasm/src/: attributes.rs  builders.rs  lib.rs  mem.rs  ops.rs
eval/: CHANGELOG.md  Cargo.toml  README.md
eval/src/: eval.rs  evaluator.rs  lib.rs  tests.rs  value.rs
eval/src/evaluator/: context.rs  frame.rs  memory.rs
examples/auth-component-rpo-falcon512/: Cargo.toml  miden-project.toml  rust-toolchain.toml
examples/auth-component-rpo-falcon512/src/: lib.rs
examples/auth-component-rpo-falcon512/wit/: interface.wit
examples/basic-wallet/: Cargo.toml  miden-project.toml  rust-toolchain.toml
examples/basic-wallet-tx-script/: Cargo.toml  miden-project.toml
examples/basic-wallet-tx-script/src/: lib.rs
examples/basic-wallet-tx-script/wit/: interface.wit
examples/basic-wallet/src/: lib.rs
examples/basic-wallet/wit/: basic-wallet.wit
examples/counter-caller/: Cargo.toml
examples/counter-caller/src/: lib.rs
examples/counter-contract/: Cargo.toml  counter_contract.masm  miden-project.toml  rust-toolchain.toml
examples/counter-contract/src/: lib.rs
examples/counter-contract/wit/: counter.wit
examples/counter-note/: Cargo.toml  miden-project.toml
examples/counter-note/src/: lib.rs
examples/counter-note/wit/: counter-note.wit
examples/is-prime/: Cargo.toml  inputs.toml  miden-project.toml  rust-toolchain.toml
examples/is-prime/src/: lib.rs
examples/p2id-tx-script/: Cargo.toml  miden-project.toml
examples/p2id-tx-script/src/: lib.rs
examples/p2ide-note/: Cargo.toml  miden-project.toml
examples/p2ide-note/src/: lib.rs
examples/storage-example/: Cargo.toml  miden-project.toml
examples/storage-example/src/: lib.rs
examples/storage-example/wit/: storage-example.wit
examples/swapp-note/: Cargo.toml  rust-toolchain.toml
examples/swapp-note/src/: lib.rs
examples/swapp-note/wit/: swapp-note.wit
frontend-wasm2/: Cargo.toml
frontend-wasm2/src/: config.rs  error.rs  lib.rs  ssa.rs  test_utils.rs  translation_utils.rs
frontend-wasm2/src/code_translator/: mod.rs  tests.rs  tests_unsupported.rs
frontend-wasm2/src/component/: build_ir.rs  flat.rs  lift_exports.rs  lower_imports.rs  mod.rs  parser.rs  translator.rs
frontend-wasm2/src/intrinsics/: felt.rs  mem.rs  mod.rs
frontend-wasm2/src/miden_abi/: mod.rs  transform.rs
frontend-wasm2/src/module/: build_ir.rs  func_translation_state.rs  func_translator.rs  function_builder_ext.rs  instance.rs  mod.rs  module_env.rs  module_translation_state.rs  types.rs
hir-analysis/: CHANGELOG.md  Cargo.toml
hir-analysis/src/: analyses.rs  analysis.rs  anchor.rs  config.rs  control_flow.rs  data.rs  dense.rs  dependency_graph.rs  dominance.rs  lattice.rs  lib.rs  liveness.rs  solver.rs  sparse.rs  treegraph.rs
hir-analysis/src/analyses/: constant_propagation.rs  dce.rs  liveness.rs  loops.rs  spills.rs
hir-analysis/src/analysis/: state.rs
hir-analysis/src/dense/: backward.rs  forward.rs  lattice.rs
hir-analysis/src/solver/: allocator.rs
hir-analysis/src/sparse/: backward.rs  forward.rs  lattice.rs
hir-analysis/src/validation/: block.rs  function.rs  naming.rs  typecheck.rs
hir-symbol/: CHANGELOG.md  Cargo.toml  build.rs
hir-symbol/src/: lib.rs  symbols.toml
hir-transform/: CHANGELOG.md  Cargo.toml
hir-transform/src/: canonicalization.rs  cfg_to_scf.rs  cse.rs  dce.rs  dead_debug_ops.rs  inline_blocks.rs  lib.rs  sccp.rs  scheduling.rs  sink.rs  spill.rs  split_critical_edges.rs
hir-transform/src/adt/: scoped_map.rs
hir-transform/src/cfg_to_scf/: edges.rs  transform.rs
hir2/: Cargo.toml
hir2/src/: adt.rs  any.rs  attributes.rs  constants.rs  dataflow.rs  derive.rs  folder.rs  hash.rs  ir.rs  itertools.rs  lib.rs  pass.rs  transforms.rs  version.rs
hir2/src/adt/: arena.rs  smalldeque.rs  smallmap.rs  smallset.rs  sparsemap.rs
hir2/src/attributes/: call_conv.rs  visibility.rs
hir2/src/dataflow/: analyses.rs  analysis.rs  anchor.rs  change_result.rs  dense.rs  lattice.rs  program_point.rs  solver.rs  sparse.rs
hir2/src/dialects/: builtin.rs  hir.rs  test.rs
hir2/src/ir/: block.rs  builder.rs  callable.rs  cfg.rs  context.rs  dialect.rs  dominance.rs  effects.rs  entity.rs  immediates.rs  insert.rs  loops.rs  op.rs  operands.rs  operation.rs  print.rs  region.rs  successor.rs  symbol_table.rs  symbols.rs  traits.rs  value.rs  visit.rs
hir2/src/matchers/: matcher.rs
hir2/src/pass/: analysis.rs  instrumentation.rs  manager.rs  pass.rs  registry.rs  specialization.rs  statistics.rs
hir2/src/patterns/: applicator.rs  driver.rs  pattern.rs  pattern_set.rs  (+1 more)
midenc-compile/: CHANGELOG.md  Cargo.toml
midenc-compile/src/: cargo.rs  compiler.rs  debug_info.rs  lib.rs  rust.rs  stage.rs
midenc-compile/tests/: codegen_legalization.rs
midenc-driver/: CHANGELOG.md  Cargo.toml
midenc-driver/src/: lib.rs  midenc.rs
midenc-log/: Cargo.toml
midenc-log/src/: lib.rs  logger.rs  suppress.rs
midenc-session/: CHANGELOG.md  Cargo.toml
midenc-session/src/: color.rs  diagnostics.rs  emit.rs  emitter.rs  inputs.rs  lib.rs  libs.rs  outputs.rs  path.rs  registry.rs  statistics.rs
(+2634 files in other folders)
