[workspace]
resolver = "2"
members = [
    "codegen/*",
    "dialects/*",
    "eval",
    "frontend/*",
    "hir",
    "hir-analysis",
    "hir-macros",
    "hir-symbol",
    "hir-transform",
    "hir-type",
    "midenc",
    "midenc-compile",
    "midenc-debug",
    "midenc-driver",
    "midenc-session",
    "sdk/*",
    "tools/*",
    "tests/integration",
]
exclude = [
    "sdk/.cargo",
    "tests/rust-apps-wasm",
    "cargo-ext/tests/data",
    "examples",
]

[workspace.package]
version = "0.0.8"
rust-version = "1.86"
authors = ["Miden contributors"]
description = "An intermediate representation and compiler for Miden Assembly"
repository = "https://github.com/0xPolygonMiden/compiler"
homepage = "https://github.com/0xPolygonMiden/compiler"
documentation = "https://github.com/0xPolygonMiden/compiler"
categories = ["compilers"]
keywords = ["compiler", "miden"]
license = "MIT"
readme = "README.md"
edition = "2021"
publish = false

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
bitflags = "2.4"
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
blink-alloc = { version = "0.3", default-features = false, features = [
    "alloc",
    "nightly",
] }
clap = { version = "4.5", default-features = false, features = [
    "derive",
    "std",
    "env",
    "help",
    "suggestions",
    "error-context",
] }
cranelift-entity = "0.108"
compact_str = { version = "0.8", default-features = false }
env_logger = "0.11"
expect-test = "1.5"
hashbrown = { version = "0.14.5", features = ["nightly"] }
Inflector = "0.11"
intrusive-collections = "0.9"
inventory = "0.3"
log = "0.4"
miette = { package = "miden-miette", version = "7.1.1" }
paste = "1.0"
parking_lot = "0.12"
parking_lot_core = "0.9"
petgraph = "0.6"
pretty_assertions = "1.0"
proptest = "1.4"
rustc-hash = { version = "2.0", default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "serde_derive",
    "alloc",
    "rc",
] }
smallvec = { version = "1.14", default-features = false, features = [
    "union",
    "const_generics",
    "const_new",
    "drain_filter",
] }
thiserror = { package = "miden-thiserror", version = "1.0" }
toml = { version = "0.8", features = ["preserve_order"] }
miden-formatting = { version = "0.1", default-features = false }

# miden-assembly = { version = "0.13.0", default-features = false }
# miden-core = { version = "0.13.0", default-features = false, features = [
#     "diagnostics",
# ] }
# miden-processor = { version = "0.13.0", default-features = false }
# miden-stdlib = { version = "0.13.0", default-features = false, features = [
#     "with-debug-info",
# ] }
# miden-mast-package = { version = "0.13.0", default-features = false }

miden-assembly = { version = "0.14.0", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm", rev = "2239ba1aea7d5984037e791a20e0ced8c9391bd1" }
miden-core = { version = "0.14.0", default-features = false, features = [
    "diagnostics",
], git = "https://github.com/0xPolygonMiden/miden-vm", rev = "2239ba1aea7d5984037e791a20e0ced8c9391bd1" }
miden-processor = { version = "0.14.0", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm", rev = "2239ba1aea7d5984037e791a20e0ced8c9391bd1" }
miden-stdlib = { version = "0.14.0", default-features = false, features = [
    "with-debug-info",
], git = "https://github.com/0xPolygonMiden/miden-vm", rev = "2239ba1aea7d5984037e791a20e0ced8c9391bd1" }
miden-mast-package = { version = "0.14.0", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm", rev = "2239ba1aea7d5984037e791a20e0ced8c9391bd1" }

# This is here for convenience if we need to quickly use a git ref of the VM crates
#miden-assembly = { version = "0.11.0", git = "https://github.com/0xPolygonMiden/miden-vm", rev = "4d23f948bbf0c8fb7cd7ecba80bb02d37c1724bb" }
midenc-codegen-masm = { version = "0.0.8", path = "codegen/masm" }
midenc-dialect-arith = { version = "0.0.8", path = "dialects/arith" }
midenc-dialect-hir = { version = "0.0.8", path = "dialects/hir" }
midenc-dialect-scf = { version = "0.0.8", path = "dialects/scf" }
midenc-dialect-cf = { version = "0.0.8", path = "dialects/cf" }
midenc-dialect-ub = { version = "0.0.8", path = "dialects/ub" }
midenc-hir = { version = "0.0.8", path = "hir" }
midenc-hir-analysis = { version = "0.0.8", path = "hir-analysis" }
midenc-hir-eval = { version = "0.0.8", path = "eval" }
midenc-hir-macros = { version = "0.0.8", path = "hir-macros" }
midenc-hir-symbol = { version = "0.0.8", path = "hir-symbol" }
midenc-hir-transform = { version = "0.0.8", path = "hir-transform" }
midenc-hir-type = { version = "0.0.8", path = "hir-type" }
midenc-frontend-wasm = { version = "0.0.8", path = "frontend/wasm" }
midenc-compile = { version = "0.0.8", path = "midenc-compile" }
midenc-driver = { version = "0.0.8", path = "midenc-driver" }
midenc-debug = { version = "0.0.8", path = "midenc-debug" }
midenc-session = { version = "0.0.8", path = "midenc-session" }
cargo-miden = { version = "0.0.8", path = "tools/cargo-miden" }
miden-integration-tests = { version = "0.0.0", path = "tests/integration" }
wat = "1.0.69"
tokio = { version = "1.39.2", features = ["rt", "time", "macros"] }

[profile.dev]
lto = false
# Needed for 'inventory' to work
codegen-units = 1

[profile.release]
opt-level = 2
debug = true
codegen-units = 1
lto = "thin"

# The following crates are always built with optimizations
[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

[profile.dev.package.expect-test]
opt-level = 3

[profile.dev.package.dissimilar]
opt-level = 3

[profile.dev.package.regex-syntax]
opt-level = 3

[profile.dev.package.onig]
opt-level = 3

[profile.dev.package.miden-crypto]
opt-level = 3
