[workspace]
resolver = "2"
members = [
    "benches",
    "codegen/*",
    "dialects/*",
    "eval",
    "frontend/*",
    "hir",
    "hir-analysis",
    "hir-macros",
    "hir-symbol",
    "hir-transform",
    "midenc",
    "midenc-compile",
    "midenc-driver",
    "midenc-log",
    "midenc-session",
    "sdk/field-repr/*",
    "sdk/alloc",
    "sdk/base",
    "sdk/base-macros",
    "sdk/base-sys",
    "sdk/sdk",
    "sdk/stdlib-sys",
    "sdk/wasm-metadata",
    "tools/*",
    "tests/integration",
    "tests/integration-network",
]
exclude = [
    "sdk/.cargo",
    "tests/",
    "examples",
]

[workspace.package]
version = "0.8.1"
rust-version = "1.92"
authors = ["Miden contributors"]
description = "An intermediate representation and compiler for Miden Assembly"
repository = "https://github.com/0xMiden/compiler"
homepage = "https://github.com/0xMiden/compiler"
documentation = "https://github.com/0xMiden/compiler"
categories = ["compilers"]
keywords = ["compiler", "miden"]
license = "MIT"
readme = "README.md"
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
bitflags = "2.4"
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
blink-alloc = { version = "0.4", default-features = false, features = [
    "alloc",
    "nightly",
] }
clap = { version = "4.5", default-features = false, features = [
    "derive",
    "std",
    "env",
    "help",
    "usage",
    "suggestions",
    "error-context",
] }
cranelift-entity = "0.120"
compact_str = { version = "0.9", default-features = false }
hashbrown = { version = "0.15", features = ["nightly"] }
Inflector = "0.11"
intrusive-collections = "0.9"
inventory = "0.3"
litcheck = { package = "litcheck-core", version = "0.4" }
litcheck-filecheck = "0.4"
log = { version = "0.4", features = ["kv"] }
env_logger = "0.11"

# Miden Dependencies
miden-assembly = { version = "0.22", default-features = false }
miden-core = { version = "0.22", default-features = false }
miden-debug = { version = "0.6" }
miden-debug-types = { version = "0.22", default-features = false }
miden-assembly-syntax = { version = "0.22", default-features = false }
miden-formatting = { version = "0.1", default-features = false }
miden-protocol = { version = "0.14.0", default-features = false }
miden-standards = { version = "0.14.0", default-features = false }

miden-processor = { version = "0.22", default-features = false }
miden-core-lib = { version = "0.22", default-features = false }
miden-mast-package = { version = "0.22", default-features = false }
miette = { package = "miden-miette", version = "8.0" }
paste = "1.0"
parking_lot = "0.12"
parking_lot_core = "0.9"
petgraph = { version = "0.8", default-features = false, features = [
    "graphmap"
] }
pretty_assertions = "1.0"
proptest = "1.4"
proc-macro2 = "1.0"
quote = "1.0"
rustc-hash = { version = "2.0", default-features = false }
semver = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "serde_derive",
    "alloc",
    "rc",
] }
heck = "0.5"

smallvec = { version = "1.14", default-features = false, features = [
    "union",
    "const_generics",
    "const_new",
    "drain_filter",
] }
syn = { version = "2.0", features = [
    "full",
    "parsing",
    "derive",
    "extra-traits",
    "printing",
] }
thiserror = { package = "miden-thiserror", version = "1.0" }
toml = { version = "0.8", features = ["preserve_order"] }
tokio = { version = "1.39.2", features = ["rt", "time", "macros", "rt-multi-thread"] }
wat = "1.0.69"
wasmprinter = "0.227"
wasmparser = { version = "0.227", default-features = false, features = [
    "features",
    "component-model",
    "validate",
    "simd",
] }

# Workspace crates
midenc-codegen-masm = { version = "0.8.1", path = "codegen/masm" }
midenc-dialect-arith = { version = "0.8.1", path = "dialects/arith" }
midenc-dialect-hir = { version = "0.8.1", path = "dialects/hir" }
midenc-dialect-scf = { version = "0.8.1", path = "dialects/scf" }
midenc-dialect-cf = { version = "0.8.1", path = "dialects/cf" }
midenc-dialect-debuginfo = { version = "0.8.1", path = "dialects/debuginfo" }
midenc-dialect-ub = { version = "0.8.1", path = "dialects/ub" }
midenc-dialect-wasm = { version = "0.8.1", path = "dialects/wasm" }
midenc-hir = { version = "0.8.1", path = "hir" }
midenc-hir-analysis = { version = "0.8.1", path = "hir-analysis" }
midenc-hir-eval = { version = "0.8.1", path = "eval" }
midenc-hir-macros = { version = "0.8.1", path = "hir-macros" }
midenc-hir-symbol = { version = "0.8.1", path = "hir-symbol" }
midenc-hir-transform = { version = "0.8.1", path = "hir-transform" }
midenc-frontend-wasm = { version = "0.8.1", path = "frontend/wasm" }
midenc-frontend-wasm-metadata = { version = "0.12.0", path = "sdk/wasm-metadata" }
midenc-compile = { version = "0.8.1", path = "midenc-compile" }
midenc-driver = { version = "0.8.1", path = "midenc-driver" }
midenc-log = { version = "0.8.1", path = "midenc-log", features = ["kv"] }
midenc-session = { version = "0.8.1", path = "midenc-session" }
cargo-miden = { version = "0.8.1", path = "tools/cargo-miden" }
miden-integration-tests = { path = "tests/integration" }
midenc-expect-test = { path = "tools/expect-test" }
miden-field = { version = "0.22" }

[profile.dev]
lto = false
# Needed for 'inventory' to work
codegen-units = 1

[profile.release]
opt-level = 2
debug = true
codegen-units = 1
lto = "fat"

# The following crates are always built with optimizations
[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

# Speed up the test profile (proving times)
# ============================================================
# The test package itself needs optimization
# Core Miden packages
[profile.test.package.miden-processor]
opt-level = 3

[profile.test.package.miden-protocol]
opt-level = 3

# Additional crypto and math-heavy dependencies
[profile.test.package.miden-crypto]
opt-level = 3

[profile.test.package.miden-standards]
opt-level = 3

[profile.test.package.miden-core]
opt-level = 3

[profile.test.package.miden-assembly]
opt-level = 3

[profile.test.package.miden-core-lib]
opt-level = 3

# Build the workspace with release-like settings only when explicitly requested
# via the `test-release` profile.
[profile.test-release]
inherits = "test"
opt-level = 2
debug = true
codegen-units = 1
debug-assertions = false
overflow-checks = false
incremental = false

[profile.test.package.miden-debug]
opt-level = 3
# ============================================================

[profile.dev.package.dissimilar]
opt-level = 3

[profile.dev.package.regex-syntax]
opt-level = 3

[profile.dev.package.onig]
opt-level = 3

[profile.dev.package.miden-crypto]
opt-level = 3

# Speed up the local network integration tests (proving times)
# ============================================================
[profile.dev.package.miden-processor]
opt-level = 3

[profile.dev.package.miden-protocol]
opt-level = 3
# ============================================================
