[package]
name = "midenc-hir-eval"
description = "An interpreter for Miden IR"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["midenc-hir/std"]

[dependencies]
log.workspace = true
midenc-dialect-arith.workspace = true
midenc-dialect-cf.workspace = true
midenc-dialect-scf.workspace = true
midenc-dialect-hir.workspace = true
midenc-dialect-ub.workspace = true
midenc-hir.workspace = true
midenc-session.workspace = true
thiserror.workspace = true
