[package]
name = "midenc-hir-analysis"
description = "Analysis passes and utilties for Miden HIR"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
blink-alloc.workspace = true
bitvec.workspace = true
log.workspace = true
midenc-hir.workspace = true
