[package]
name = "midenc-hir-analysis"
description = "Analysis passes and utilties for Miden HIR"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
blink-alloc.workspace = true
bitvec.workspace = true
log.workspace = true
midenc-hir.workspace = true

[dev-dependencies]
pretty_assertions = "1.0"
midenc-dialect-hir = { path = "../dialects/hir" }
midenc-dialect-arith = { path = "../dialects/arith" }
midenc-dialect-cf = { path = "../dialects/cf" }
midenc-dialect-scf = { path = "../dialects/scf" }
midenc-expect-test.workspace = true
env_logger.workspace = true
