[package]
name = "midenc-hir-symbol"
description = "String interning for the Miden compiler"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["dep:parking_lot", "miden-utils-sync/std", "serde?/std"]
serde = ["dep:serde"]
compact_str = ["dep:compact_str"]

[dependencies]
compact_str = { workspace = true, optional = true }
lock_api = "0.4"
miden-formatting.workspace = true
miden-utils-sync.workspace = true
parking_lot = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[build-dependencies]
Inflector.workspace = true
hashbrown.workspace = true
hashbrown_old_nightly_hack.workspace = true
rustc-hash.workspace = true
serde.workspace = true
toml = { workspace = true, features = ["parse"] }

[package.metadata.cargo-machete]
ignored = ["Inflector", "hashbrown", "rustc-hash", "toml"]
