[package]
name = "midenc-hir-transform"
description = "Transformation passes and utilities for Miden HIR"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
midenc-hir.workspace = true
midenc-hir-analysis.workspace = true
midenc-session.workspace = true

[dev-dependencies]
litcheck.workspace = true
litcheck-filecheck.workspace = true
midenc-dialect-arith.workspace = true
midenc-dialect-hir.workspace = true
midenc-dialect-scf.workspace = true
midenc-log.workspace = true
