[package]
name = "midenc-hir2"
description = "High-level Intermediate Representation for Miden Assembly"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["rustc-demangle/std", "compact_str/std", "semver/std"]
serde = [
    "dep:serde",
    "dep:serde_repr",
    "dep:serde_bytes",
    "midenc-hir-symbol/serde",
]
debug_refcell = []

[dependencies]
anyhow.workspace = true
blink-alloc = { version = "0.3", default-features = false, features = [
    "alloc",
    "nightly",
] }
bitvec.workspace = true
bitflags.workspace = true
compact_str.workspace = true
hashbrown.workspace = true
intrusive-collections.workspace = true
inventory.workspace = true
log.workspace = true
miden-core.workspace = true
midenc-hir-symbol.workspace = true
midenc-hir-type.workspace = true
midenc-hir-macros.workspace = true
midenc-session.workspace = true
rustc-hash.workspace = true
rustc-demangle = "0.1.19"
serde = { workspace = true, optional = true }
serde_repr = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }
semver = { version = "1.0", default-features = false }
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions = "1.0"
env_logger.workspace = true
