[package]
name = "midenc-compile"
description = "The compiler frontend for Miden"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["anyhow/std", "miden-assembly/std", "midenc-hir/std", "dep:clap"]

[dependencies]
anyhow.workspace = true
clap = { workspace = true, optional = true }
log.workspace = true
inventory.workspace = true
midenc-codegen-masm.workspace = true
miden-assembly.workspace = true
miden-mast-package.workspace = true
midenc-frontend-wasm2.workspace = true
midenc-dialect-scf.workspace = true
midenc-dialect-hir.workspace = true
midenc-hir.workspace = true
midenc-hir-transform.workspace = true
midenc-session.workspace = true
thiserror.workspace = true
wat.workspace = true
