[package]
name = "midenc-driver"
description = "The driver for midenc, the Miden compiler"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["alloc", "log/std", "clap/color"]
alloc = ["clap/help", "clap/usage", "clap/error-context", "clap/suggestions"]

[dependencies]
clap.workspace = true
log.workspace = true
midenc-hir.workspace = true
midenc-session.workspace = true
midenc-compile.workspace = true
thiserror.workspace = true
