[package]
name = "midenc-codegen-masm2"
description = "Miden Assembly backend for the Miden compiler"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["midenc-hir2/std", "midenc-dialect-hir/std"]

[dependencies]
inventory.workspace = true
log.workspace = true
miden-assembly.workspace = true
miden-core.workspace = true
miden-mast-package.workspace = true
miden-processor.workspace = true
miden-stdlib.workspace = true
midenc-hir2 = { workspace = true, features = ["serde"] }
midenc-dialect-hir.workspace = true
midenc-session.workspace = true
petgraph.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
env_logger.workspace = true
